[package]
name = "ngok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
tokio = { version = "1.5", features = ["full"]}
serde = { version = "1.0.137", features = ["derive"] }
bytes = "1.1.0"
bincode = "1.3.3"
clap = { version = "3.2.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
regex = { version = "1", features = ["unicode-case"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs" 